// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetch does nothing if data exists 1`] = `
Object {
  "/some/route/": Object {
    "id": 1,
    "isFetching": false,
    "isPostType": true,
    "isReady": true,
    "type": "example",
  },
}
`;

exports[`fetch returns 404 is fetch fails 1`] = `
Object {
  "/some/route/": Object {
    "is404": true,
    "isFetching": false,
    "isReady": false,
  },
}
`;

exports[`fetch should work if data doesn't exist 1`] = `
Object {
  "/some/route/": Object {
    "id": 1,
    "isFetching": false,
    "isPostType": true,
    "isReady": true,
    "type": "example",
  },
}
`;

exports[`init should add redirect for categories if 'categoryBase' is set 1`] = `
Array [
  Object {
    "func": [Function],
    "name": "category base",
    "pattern": "/wp-cat/:subpath+/",
    "priority": 20,
  },
  Object {
    "func": [Function],
    "name": "ignore default category base",
    "pattern": "/category/(.*)/",
    "priority": 20,
  },
]
`;

exports[`init should add redirect for tags if 'tagBase' is set 1`] = `
Array [
  Object {
    "func": [Function],
    "name": "tag base",
    "pattern": "/wp-tag/:subpath+/",
    "priority": 20,
  },
  Object {
    "func": [Function],
    "name": "ignore default tag base",
    "pattern": "/tag/(.*)/",
    "priority": 20,
  },
]
`;

exports[`init should add redirect for the specified homepage 1`] = `
Array [
  Object {
    "func": [Function],
    "name": "homepage",
    "pattern": "/",
    "priority": 20,
  },
]
`;

exports[`init should add redirect for the specified posts page 1`] = `
Array [
  Object {
    "func": [Function],
    "name": "posts page",
    "pattern": "/all-posts/",
    "priority": 20,
  },
]
`;

exports[`init should add redirect if 'subirectory' is present 1`] = `
Array [
  Object {
    "func": [Function],
    "name": "subdirectory",
    "pattern": "/blog/:subpath*/",
    "priority": 10,
  },
  Object {
    "func": [Function],
    "name": "ignore root",
    "pattern": "/(.*)",
    "priority": 10,
  },
  Object {
    "func": [Function],
    "name": "homepage",
    "pattern": "/",
    "priority": 20,
  },
  Object {
    "func": [Function],
    "name": "posts page",
    "pattern": "/all-posts/",
    "priority": 20,
  },
  Object {
    "func": [Function],
    "name": "category base",
    "pattern": "/wp-cat/:subpath+/",
    "priority": 20,
  },
  Object {
    "func": [Function],
    "name": "ignore default category base",
    "pattern": "/category/(.*)/",
    "priority": 20,
  },
  Object {
    "func": [Function],
    "name": "tag base",
    "pattern": "/wp-tag/:subpath+/",
    "priority": 20,
  },
  Object {
    "func": [Function],
    "name": "ignore default tag base",
    "pattern": "/tag/(.*)/",
    "priority": 20,
  },
]
`;
